<resources>
    <string name="app_name">SimpleTool</string>
    <string name="calculator">Calculator</string>
    <string name="converter">Converter</string>
    <string name="theme">Theme</string>
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="temprature">Temprature</string>
    <string name="weight">Weight</string>
    <string name="author">201603001章宏彬, 201603027赵安</string>
    <string name="ok">OK</string>
</resources>
